# investorline_csv

./: LICENSE  README.md  main.py  pyproject.toml  report.json
ddl/: CreateInvestorlineTables
resources/: asses_mix.txt
template/: csvbase.py
