[tool.poetry]
name = "investorline-csv"
version = "0.1.0"
description = ""
authors = ["Wendell Nichols <wnichols@waveapps.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jsonpickle = "^2.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
